# school

./: README.md  pyproject.toml
app/: celery.py  settings.py  urls.py
materialsApp/: apps.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py
materialsApp/migrations/: 0001_initial.py  0002_alter_course_image.py  0002_initial.py  0003_alter_lesson_course.py  0003_alter_lesson_course_subscription.py  0004_course_owner_lesson_owner.py  0005_alter_lesson_course.py
materialsApp/templates/materialsApp/: lesson_create.html  lesson_list.html
materialsApp/views/: course.py  lesson.py  subscription.py
paymentApp/: models.py  serializers.py  services.py  urls.py  views.py
paymentApp/migrations/: 0001_initial.py  0002_rename_pyment_payment.py  0003_payment_course_payment_lesson.py
usersApp/: models.py  permissions.py  serializers.py  urls.py  views.py
usersApp/management/commands/: filling.py
usersApp/migrations/: 0001_initial.py  0002_user_avatar_user_city_user_phone.py  0003_payments.py  0004_alter_payments_options.py  0005_alter_payments_user.py
usersApp/views/: payments.py  user.py
